<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DirectionActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/lat"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:hint="lat" />
        <EditText
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@id/lat"
            android:hint="lng"
            android:id="@+id/lng"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/lng"
            android:text="update user"
            android:id="@+id/btnUpdateUser"
            android:onClick="onUpdateUserClicked"/>

    </RelativeLayout>

    <Switch
        android:id="@+id/directionSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:onClick="onSwitchClicked"
        android:paddingHorizontal="10dp"
        android:text="Brief"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/directionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="Directions!"
        android:textSize="30sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/goingPreviousText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/directionSwitch"
        android:text=""
        android:textSize="30sp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btmNavi"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"
        app:itemBackground="@color/teal_700"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btmNavi"
        android:layout_marginBottom="10dp"
        android:paddingHorizontal="10dp">

        <Button
            android:id="@+id/prevBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:onClick="onPrevButtonClicked"
            android:text="Prev" />

        <Button
            android:id="@+id/skipBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:onClick="onSkipButtonClicked"
            android:text="Skip"/>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:onClick="onNextButtonClicked"
            android:text="Next" />
    </RelativeLayout>

    <TextView
        android:id="@+id/nextExhibit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/directionSwitch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="95dp"
        android:text="Navigating to: "
        android:textSize="30sp" />


    <Button
        android:id="@+id/replanBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btmNavi"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="159dp"
        android:layout_marginBottom="74dp"
        android:onClick="onReplanButtonClicked"
        android:text="Replan?"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="load route"
        android:onClick="onLoadClick"
        android:layout_below="@id/directionSwitch"
        android:layout_alignParentEnd="true"/>


</RelativeLayout>