<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="Search"
        android:id="@+id/icSearch"
        android:icon="@drawable/ic_search"/>

    <item
        android:title="Planner"
        android:id="@+id/icPlanner"
        android:icon="@drawable/ic_planner"/>

    <item
        android:title="Direction"
        android:id="@+id/icDirection"
        android:icon="@drawable/ic_direction"/>


</menu>