<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/node_item_background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvName"
        android:text="Monkey"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/tvAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvName"
        android:layout_alignParentEnd="true"
        android:clickable="true"
        android:text="Add"
        android:textSize="18sp" />

</RelativeLayout>