<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">


    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/searchView"/>

    <ListView
        android:id="@+id/lvResults"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btmNavi"
        android:layout_below="@id/searchView"
        android:padding="10dp" />


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btmNavi"
        android:layout_alignParentBottom="true"
        app:menu="@menu/menu"
        app:itemBackground="@color/teal_700"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"/>





</RelativeLayout>